# AI_Smart_Resume

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  project_scope.md  pyproject.toml  start.bat
.github/workflows/: ci.yml
docs/: AGENTIC_PROTOCOL.md  AGENTS_LOG.md  ARCHITECTURE.md  CODEX_BACKEND_HANDOVER.md  DELIVERABLES.md  FRONTEND_HANDOVER.md  HANDOVER.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: BenchmarkBars.tsx  CVPreview.tsx  DropZone.tsx  RadarChart.tsx  RiskHeatmap.tsx  ScoreHero.tsx
frontend/lib/: api.ts  types.ts
scripts/: fix-docker-and-start.bat  fix-docker-registry.reg  fix-docker.ps1  run.ps1
src/smart_resume/: __init__.py  cli.py  config.py  logging_config.py  orchestrator.py
src/smart_resume/agents/: base.py  benchmark.py  cv_generator.py  distinctiveness.py  extraction.py  re_evaluation.py  risk_assessment.py  scoring.py
src/smart_resume/api/: app.py  auth.py  auth_routes.py  routes.py  schemas.py
src/smart_resume/db/: __init__.py  base.py  engine.py  models.py  repository.py
src/smart_resume/exporters/: __init__.py  docx_exporter.py  pdf_exporter.py
src/smart_resume/models/: base.py  (+5 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_api_e2e.py  test_frontend_contract.py
tests/fixtures/: sample_cv.txt  sample_jd.txt
tests/integration/: test_pipeline.py
tests/unit/: test_auth.py  test_auth_routes.py  test_config.py  test_edge_cases.py  test_health.py  test_models.py  test_parsers.py  test_repository.py  test_safe_parse.py  test_sanitize.py
(+14 files in other folders)
